<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.huawei.devbridge</groupId>
    <artifactId>relay-controller</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>relay-controller</name>
    <description>Relay Controller control plane service for DevBridge tunnel metadata.</description>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <flyway.version>12.10.0</flyway.version>
        <nimbus-jose-jwt.version>10.9.1</nimbus-jose-jwt.version>
        <swagger-annotations.version>2.2.52</swagger-annotations.version>
        <openapi-generator.version>7.23.0</openapi-generator.version>
        <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
        <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
        <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
        <lombok.version>1.18.46</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>io.lettuce</groupId>
                    <artifactId>lettuce-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>${nimbus-jose-jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations-jakarta</artifactId>
            <version>${swagger-annotations.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-build-runtime</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.0,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven-antrun-plugin.version}</version>
                <executions>
                    <execution>
                        <id>clean-openapi-generated-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <delete dir="${project.build.directory}/generated-sources/openapi"/>
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>fix-openapi-result-schema-class</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <replaceregexp byline="true"
                                               match="com\.huawei\.devbridge\.relaycontroller\.common\.model\.Result&lt;\?&gt;\.class"
                                               replace="com.huawei.devbridge.relaycontroller.common.model.Result.class">
                                    <fileset dir="${project.build.directory}/generated-sources/openapi/src/main/java">
                                        <include name="**/*.java"/>
                                    </fileset>
                                </replaceregexp>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator.version}</version>
                <executions>
                    <execution>
                        <id>generate-openapi-interfaces</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/static/openapi.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.huawei.devbridge.relaycontroller.generated.api</apiPackage>
                            <modelPackage>com.huawei.devbridge.relaycontroller.generated.model</modelPackage>
                            <generateApiTests>false</generateApiTests>
                            <generateModelTests>false</generateModelTests>
                            <generateSupportingFiles>false</generateSupportingFiles>
                            <skipIfSpecIsUnchanged>false</skipIfSpecIsUnchanged>
                            <globalProperties>
                                <apis/>
                                <models>false</models>
                                <supportingFiles>false</supportingFiles>
                            </globalProperties>
                            <configOptions>
                                <useSpringBoot3>true</useSpringBoot3>
                                <interfaceOnly>true</interfaceOnly>
                                <skipDefaultInterface>true</skipDefaultInterface>
                                <useTags>true</useTags>
                                <useResponseEntity>false</useResponseEntity>
                                <dateLibrary>java8</dateLibrary>
                            </configOptions>
                            <importMappings>
                                <importMapping>CreateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelRequest</importMapping>
                                <importMapping>UpdateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelRequest</importMapping>
                                <importMapping>MeteringReportRequest=com.huawei.devbridge.relaycontroller.interfaces.request.MeteringReportRequest</importMapping>
                                <importMapping>CreateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelPortRequest</importMapping>
                                <importMapping>UpdateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelPortRequest</importMapping>
                                <importMapping>BooleanResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>CreateTunnelResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>TunnelDetailResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>TunnelListResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>MeteringReportResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>TunnelPortResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>TunnelPortListResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                                <importMapping>GatewayTunnelPortPolicyResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</importMapping>
                            </importMappings>
                            <schemaMappings>
                                <schemaMapping>CreateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelRequest</schemaMapping>
                                <schemaMapping>UpdateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelRequest</schemaMapping>
                                <schemaMapping>MeteringReportRequest=com.huawei.devbridge.relaycontroller.interfaces.request.MeteringReportRequest</schemaMapping>
                                <schemaMapping>CreateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelPortRequest</schemaMapping>
                                <schemaMapping>UpdateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelPortRequest</schemaMapping>
                                <schemaMapping>BooleanResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>CreateTunnelResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>TunnelDetailResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>TunnelListResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>MeteringReportResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>TunnelPortResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>TunnelPortListResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                                <schemaMapping>GatewayTunnelPortPolicyResult=com.huawei.devbridge.relaycontroller.common.model.Result&lt;?&gt;</schemaMapping>
                            </schemaMappings>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${build-helper-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-openapi-generated-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading -Xshare:off --sun-misc-unsafe-memory-access=allow</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
